--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -116,5 +116,6 @@
 	"[rust]": {
 		"editor.defaultFormatter": "rust-lang.rust-analyzer",
 		"editor.semanticHighlighting.enabled": false
-	}
+	},
+	"window.zoomLevel": 1
 }
