--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -27,9 +27,10 @@
 	"git.openRepositoryInParentFolders": "never",
 	"github.copilot.enable": {
 		"*": true,
-		"yaml": false,
 		"plaintext": true,
-		"markdown": true
+		"markdown": true,
+		"scminput": false,
+		"yaml": true
 	},
 	"terminal.integrated.inheritEnv": false,
 	"vim.statusBarColorControl": true,
@@ -45,15 +46,15 @@
 		"editor.selectionBackground": "#ffe3e94d",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#0C0E14",
-		"statusBar.debuggingBackground": "#0C0E14",
+		"statusBar.noFolderBackground": "#007acc",
+		"statusBar.debuggingBackground": "#007acc",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"statusBar.background": "#0C0E14",
+		"statusBar.background": "#007acc",
 		"editorInlayHint.background": "#0000",
 		"editorInlayHint.foreground": "#ffffff64"
 	},
@@ -100,7 +101,8 @@
 	"[python]": {
 		"editor.insertSpaces": true,
 		"editor.formatOnSave": true,
-		"editor.formatOnType": true
+		"editor.formatOnType": true,
+		"editor.defaultFormatter": "eeyore.yapf"
 	},
 	"python.analysis.typeCheckingMode": "basic",
 	"python.linting.pylintEnabled": true,
@@ -116,5 +118,7 @@
 	"[rust]": {
 		"editor.defaultFormatter": "rust-lang.rust-analyzer",
 		"editor.semanticHighlighting.enabled": false
-	}
+	},
+	"rust-analyzer.showUnlinkedFileNotification": false,
+	"window.zoomLevel": 1
 }
