--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -5,6 +5,7 @@
 		"WRONG_SCOPE_COMMENT",
 		"EMPTY_LINE_FUNCTION"
 	],
+	"update.mode": "none",
 	"workbench.colorTheme": "vity",
 	"workbench.iconTheme": "material-icon-theme",
 	"files.autoSave": "onWindowChange",
@@ -45,15 +46,15 @@
 		"editor.selectionBackground": "#ffe3e94d",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#007acc",
-		"statusBar.debuggingBackground": "#007acc",
+		"statusBar.noFolderBackground": "#0C0E14",
+		"statusBar.debuggingBackground": "#0C0E14",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"statusBar.background": "#007acc",
+		"statusBar.background": "#0C0E14",
 		"editorInlayHint.background": "#0000",
 		"editorInlayHint.foreground": "#ffffff64"
 	},
@@ -89,6 +90,9 @@
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[json]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
+	},
+	"[jsonc]": {
 		"editor.defaultFormatter": "vscode.json-language-features"
 	},
 	"[scss]": {
