--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -56,7 +56,9 @@
 		"editorBracketHighlight.foreground6": "#ff009d90",
 		"statusBar.background": "#0C0E14",
 		"editorInlayHint.background": "#0000",
-		"editorInlayHint.foreground": "#ffffff64"
+		"editorInlayHint.foreground": "#ffffff64",
+		"statusBar.foreground": "#ffffff",
+		"statusBar.debuggingForeground": "#ffffff"
 	},
 	"editor.semanticTokenColorCustomizations": {
 		"rules": {
@@ -114,6 +116,40 @@
 		"./sources"
 	],
 	"python.formatting.provider": "yapf",
+	/* Flutter/Dart automatically generated */
+	// Causes the debug view to automatically appear when a breakpoint is hit. This
+	// setting is global and not configurable per-language.
+	"debug.openDebug": "openOnDebugBreak",
+	// By default, VS Code will only switch to the Debug Console when you start
+	// debugging the first time in a session. This setting tells VS Code to always
+	// switch to the Debug Console when starting a session, so you can see the
+	// programs output.
+	// "debug.internalConsoleOptions": "openOnSessionStart",
+	"[dart]": {
+		// Automatically format code on save and during typing of certain characters
+		// (like `;` and `}`).
+		"editor.formatOnSave": true,
+		"editor.formatOnType": true,
+		// Disables built-in highlighting of words that match your selection. Without
+		// this, all instances of the selected text will be highlighted, interfering
+		// with Dart's ability to highlight only exact references to the selected variable.
+		"editor.selectionHighlight": false,
+		// By default, VS Code will pre-select the most recently used item from code
+		// completion. This is usually not the most relevant item.
+		//
+		// "first" will always select top item
+		// "recentlyUsedByPrefix" will filter the recently used items based on the
+		//     text immediately preceding where completion was invoked.
+		"editor.suggestSelection": "first",
+		// Allows pressing <TAB> to complete snippets such as `for` even when the
+		// completion list is not visible.
+		"editor.tabCompletion": "onlySnippets",
+		// By default, VS Code will populate code completion with words found in the
+		// current file when a language service does not provide its own completions.
+		// This results in code completion suggesting words when editing comments and
+		// strings. This setting will prevent that.
+		"editor.wordBasedSuggestions": false
+	},
 	"[markdown]": {
 		"editor.defaultFormatter": "yzhang.markdown-all-in-one"
 	},
