done upgrading the colors

--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -25,6 +25,7 @@
 	"explorer.confirmDragAndDrop": false,
 	"problems.showCurrentInStatus": true,
 	"workbench.startupEditor": "none",
+	"workbench.panel.defaultLocation": "right",
 	"security.workspace.trust.untrustedFiles": "open",
 	"git.openRepositoryInParentFolders": "never",
 	"github.copilot.enable": {
@@ -47,15 +48,15 @@
 		"editor.selectionBackground": "#ffe3e94d",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#0C0E14",
-		"statusBar.debuggingBackground": "#0C0E14",
+		"statusBar.noFolderBackground": "#731bb360",
+		"statusBar.debuggingBackground": "#731bb360",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"statusBar.background": "#0C0E14",
+		"statusBar.background": "#731bb360",
 		"editorInlayHint.background": "#0000",
 		"editorInlayHint.foreground": "#ffffff64",
 		"statusBar.foreground": "#ffffff",
@@ -81,7 +82,24 @@
 		"editorGroupHeader.tabsBorder": "#000000",
 		"editorGutter.addedBackground": "#61ffca",
 		"editorGutter.deletedBackground": "#ff6767",
-		"editorGutter.modifiedBackground": "#ffca85"
+		"editorGutter.modifiedBackground": "#ffca85",
+		"panel.border": "#000000",
+		"panelTitle.activeBorder": "#61ffca",
+		"panelTitle.activeForeground": "#cdccce",
+		"progressBar.background": "#61ffca",
+		"scrollbar.shadow": "#15141b",
+		"scrollbarSlider.activeBackground": "#3d375e7f",
+		"scrollbarSlider.background": "#a394f033",
+		"scrollbarSlider.hoverBackground": "#a394f033",
+		"statusBar.border": "#000000",
+		"statusBarItem.activeBackground": "#a277ff",
+		"tab.activeBorderTop": "#61ffca",
+		"tab.activeForeground": "#61ffca",
+		"statusBarItem.hoverForeground": "#61ffca",
+		"statusBarItem.remoteBackground": "#00000000",
+		"statusBarItem.errorForeground": "#ff6767",
+		"statusBarItem.warningForeground": "#ffca85",
+		"list.hoverForeground": "#61ffca"
 	},
 	"editor.semanticTokenColorCustomizations": {
 		"rules": {
