--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -48,15 +48,15 @@
 		"editor.selectionBackground": "#ffe3e94d",
 		"editorBracketMatch.background": "#ffe3e94d",
 		"editorBracketMatch.border": "#ffffff00",
-		"statusBar.noFolderBackground": "#731bb360",
-		"statusBar.debuggingBackground": "#731bb360",
+		"statusBar.noFolderBackground": "#0C0E14",
+		"statusBar.debuggingBackground": "#0C0E14",
 		"editorBracketHighlight.foreground1": "#f0f6fcc1",
 		"editorBracketHighlight.foreground2": "#ffff2690",
 		"editorBracketHighlight.foreground3": "#26ff9690",
 		"editorBracketHighlight.foreground4": "#b43bff90",
 		"editorBracketHighlight.foreground5": "#ff00f790",
 		"editorBracketHighlight.foreground6": "#ff009d90",
-		"statusBar.background": "#731bb360",
+		"statusBar.background": "#0C0E14",
 		"editorInlayHint.background": "#0000",
 		"editorInlayHint.foreground": "#ffffff64",
 		"statusBar.foreground": "#ffffff",
@@ -64,13 +64,12 @@
 		"activityBar.activeBorder": "#a277ff",
 		"activityBar.foreground": "#61ffca",
 		"activityBar.inactiveForeground": "#525156",
-		"activityBarBadge.background": "#a277ff",
-		"activityBarBadge.foreground": "#15141b",
-		"badge.background": "#a277ff",
-		"badge.foreground": "#15141b",
-		"button.background": "#61ffca",
-		"button.foreground": "#15141b",
-		"button.hoverBackground": "#49c29a",
+		"activityBarBadge.background": "#a277ffdd",
+		"badge.background": "#a277ff99",
+		"button.background": "#a277ff",
+		"button.foreground": "#fff",
+		"button.hoverBackground": "#704ac2",
+		"button.secondaryHoverBackground": "#704ac266",
 		"diffEditor.insertedTextBackground": "#00d89023",
 		"diffEditor.removedTextBackground": "#ff474720",
 		"dropdown.background": "#15141b",
@@ -80,9 +79,9 @@
 		"editorGroup.dropBackground": "#3d375e7f",
 		"editorGroupHeader.tabsBackground": "#15141b",
 		"editorGroupHeader.tabsBorder": "#000000",
-		"editorGutter.addedBackground": "#61ffca",
+		"editorGutter.addedBackground": "#72d66f",
 		"editorGutter.deletedBackground": "#ff6767",
-		"editorGutter.modifiedBackground": "#ffca85",
+		"editorGutter.modifiedBackground": "#85b0ff",
 		"panel.border": "#000000",
 		"panelTitle.activeBorder": "#61ffca",
 		"panelTitle.activeForeground": "#cdccce",
@@ -90,16 +89,24 @@
 		"scrollbar.shadow": "#15141b",
 		"scrollbarSlider.activeBackground": "#3d375e7f",
 		"scrollbarSlider.background": "#a394f033",
-		"scrollbarSlider.hoverBackground": "#a394f033",
+		"scrollbarSlider.hoverBackground": "#a394f044",
 		"statusBar.border": "#000000",
 		"statusBarItem.activeBackground": "#a277ff",
-		"tab.activeBorderTop": "#61ffca",
-		"tab.activeForeground": "#61ffca",
+		"tab.activeBorderTop": "#a277ff",
+		"tab.activeForeground": "#a277ff",
 		"statusBarItem.hoverForeground": "#61ffca",
 		"statusBarItem.remoteBackground": "#00000000",
 		"statusBarItem.errorForeground": "#ff6767",
 		"statusBarItem.warningForeground": "#ffca85",
-		"list.hoverForeground": "#61ffca"
+		"list.hoverForeground": "#c9b0ff",
+		"inputOption.activeBackground": "#a277ff99",
+		"inputOption.activeBorder": "#00000000",
+		"inputOption.hoverBackground": "#a277ff66",
+		"keybindingLabel.background": "#61ffca",
+		"keybindingLabel.foreground": "#000",
+		"toolbar.hoverBackground": "#a277ff77",
+		"toolbar.activeBackground": "#a277ffdd",
+		"focusBorder": "#a277ffdd"
 	},
 	"editor.semanticTokenColorCustomizations": {
 		"rules": {
