--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -126,6 +126,11 @@
 	"[typescript]": {
 		"editor.defaultFormatter": "vscode.typescript-language-features"
 	},
+	"typescript.inlayHints.parameterNames.enabled": "all",
+	"typescript.inlayHints.variableTypes.enabled": "all",
+	"typescript.inlayHints.propertyDeclarationTypes.enabled": "all",
+	"typescript.inlayHints.parameterTypes.enabled": "all",
+	"typescript.inlayHints.functionLikeReturnTypes.enabled": "all",
 	"typescript.format.placeOpenBraceOnNewLineForControlBlocks": true,
 	"typescript.format.placeOpenBraceOnNewLineForFunctions": true,
 	"[typescriptreact]": {
