--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -18,9 +18,9 @@
 	"editor.autoClosingQuotes": "never",
 	"editor.inlineSuggest.enabled": true,
 	"editor.codeActionsOnSave": {
-		"source.organizeImports": true,
-		"source.fixAll.eslint": true,
-		"source.sortPackageJson": true
+		"source.organizeImports": "always",
+		"source.fixAll.eslint": "always",
+		"source.sortPackageJson": "always"
 	},
 	"explorer.confirmDragAndDrop": false,
 	"problems.showCurrentInStatus": true,
@@ -199,7 +199,7 @@
 		// current file when a language service does not provide its own completions.
 		// This results in code completion suggesting words when editing comments and
 		// strings. This setting will prevent that.
-		"editor.wordBasedSuggestions": false
+		"editor.wordBasedSuggestions": "off"
 	},
 	"[markdown]": {
 		"editor.defaultFormatter": "yzhang.markdown-all-in-one"
