--- a/symlink.toml
+++ b/symlink.toml
@@ -5,6 +5,8 @@ update = 'always'
 "~/.config/zsh/config.d/prompt.zsh" = 'zsh/prompt.zsh'
 "~/.config/zsh/config.d/export.zsh" = 'zsh/export.zsh'
 "~/.config/zsh/config.d/alias.zsh" = 'zsh/alias.zsh'
+"~/.config/zsh/config.d/tool/main.zsh" = 'zsh/tool/main.zsh'
+"~/.config/zsh/config.d/tool/bun.zsh" = 'zsh/tool/bun.zsh'
 "~/.config/zsh/config.d/function/main.zsh" = 'zsh/function/main.zsh'
 "~/.config/zsh/config.d/function/git.zsh" = 'zsh/function/git.zsh'
 "~/.config/zsh/config.d/function/sh.zsh" = 'zsh/function/sh.zsh'
