--- a/symlink.toml
+++ b/symlink.toml
@@ -6,6 +6,7 @@ update = 'always'
 "~/.config/zsh/config.d/export.zsh" = 'zsh/export.zsh'
 "~/.config/zsh/config.d/alias.zsh" = 'zsh/alias.zsh'
 "~/.config/zsh/config.d/tool/main.zsh" = 'zsh/tool/main.zsh'
+"~/.config/zsh/config.d/tool/autojump.zsh" = 'zsh/tool/autojump.zsh'
 "~/.config/zsh/config.d/tool/asdf.zsh" = 'zsh/tool/asdf.zsh'
 "~/.config/zsh/config.d/tool/bun.zsh" = 'zsh/tool/bun.zsh'
 "~/.config/zsh/config.d/function/main.zsh" = 'zsh/function/main.zsh'
