--- a/symlink.toml
+++ b/symlink.toml
@@ -6,6 +6,10 @@ update = 'always'
 "~/.config/zsh/config.d/export.zsh" = 'zsh/export.zsh'
 "~/.config/zsh/config.d/alias.zsh" = 'zsh/alias.zsh'
 "~/.config/zsh/config.d/tool/main.zsh" = 'zsh/tool/main.zsh'
+"~/.config/zsh/config.d/tool/python/main.zsh" = 'zsh/tool/python/main.zsh'
+"~/.config/zsh/config.d/tool/python/pipx.zsh" = 'zsh/tool/python/pipx.zsh'
+"~/.config/zsh/config.d/tool/python/poetry.zsh" = 'zsh/tool/python/poetry.zsh'
+"~/.config/zsh/config.d/tool/python/ruff.zsh" = 'zsh/tool/python/ruff.zsh'
 "~/.config/zsh/config.d/tool/autojump.zsh" = 'zsh/tool/autojump.zsh'
 "~/.config/zsh/config.d/tool/flutter.zsh" = 'zsh/tool/flutter.zsh'
 "~/.config/zsh/config.d/tool/asdf.zsh" = 'zsh/tool/asdf.zsh'
