--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -158,7 +158,8 @@
 	"[python]": {
 		"editor.insertSpaces": true,
 		"editor.formatOnSave": true,
-		"editor.formatOnType": true
+		"editor.formatOnType": true,
+		"editor.defaultFormatter": "charliermarsh.ruff"
 	},
 	"python.analysis.typeCheckingMode": "basic",
 	"python.linting.pylintEnabled": true,
