--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -212,5 +212,6 @@
 	},
 	"[lua]": {
 		"editor.defaultFormatter": "notnoobmaster.lua-beautifier"
-	}
+	},
+	"github.copilot.editor.enableAutoCompletions": true
 }
