--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -36,6 +36,7 @@
 		"yaml": true,
 		"scminput": false
 	},
+	"github.copilot.editor.enableAutoCompletions": true,
 	"terminal.integrated.inheritEnv": false,
 	"vim.statusBarColorControl": false,
 	"vim.statusBarColors.normal": "#0C0E14",
@@ -119,6 +120,9 @@
 			}
 		}
 	},
+	"files.associations": {
+		"*.jinja2": "jinja-md"
+	},
 	"[c]": {
 		"editor.formatOnSave": false
 	},
@@ -161,7 +165,8 @@
 		"editor.insertSpaces": true,
 		"editor.formatOnSave": true,
 		"editor.formatOnType": true,
-		"editor.defaultFormatter": "charliermarsh.ruff"
+		"editor.defaultFormatter": "charliermarsh.ruff",
+		"editor.semanticHighlighting.enabled": true
 	},
 	"python.analysis.typeCheckingMode": "basic",
 	"python.terminal.activateEnvironment": true,
