--- a/data/vscode/settings.json
+++ b/data/vscode/settings.json
@@ -216,5 +216,7 @@
 	},
 	"[lua]": {
 		"editor.defaultFormatter": "notnoobmaster.lua-beautifier"
-	}
+	},
+	"nix.enableLanguageServer": true,
+	"nix.serverPath": "nil"
 }
